--- a/new.html
+++ b/new.html
@@ -192,6 +192,7 @@
             <h3>Atlantic</h3>
             <h3>For Men</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p><del>₱200.00</del></p>
             <p>₱150.00</p>
             <p>Stock: <span id="stock-product-142">2</span></p>
@@ -236,6 +237,7 @@
             <h3>Almond</h3>
             <h3>& Vanilla</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p><del>₱200.00</del></p>
             <p>₱150.00</p>
             <p>Stock: <span id="stock-product-139">2</span></p>
@@ -296,6 +298,7 @@
             <h3>Warm</h3>
             <h3>Vanilla</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p><del>₱200.00</del></p>
             <p>₱150.00</p>
             <p>Stock: <span id="stock-product-135">2</span></p>
@@ -1934,8 +1937,8 @@
 			101:10,102:10,103:10,104:10,105:2,106:2,107:2,108:2,109:2,110:2,
 			111:2,112:2,113:2,114:2,115:2,116:2,117:0,118:2,119:2,120:2,
 			121:2,122:2,123:2,124:2,125:2,126:2,127:2,128:2,129:2,130:2,
-			131:2,132:2,133:2,134:30,135:1,136:1,137:0,138:0,139:1, 140:1,
-			141:1,142:1,143:1,144:1,145:1,}; // Initial stock levels
+			131:2,132:2,133:2,134:30,135:0,136:1,137:0,138:0,139:0, 140:1,
+			141:1,142:0,143:1,144:1,145:1,}; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
