--- a/school.html
+++ b/school.html
@@ -129,6 +129,118 @@
 
     <div id="whole" class="container">
 
+<!-- Product 157 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/glue.jpg">
+            <h3>White Glue</h3>
+            <b>Multi-Purpose</b>
+		<p style="color:black;font-size:80%;">(40 grams)</p>
+            <p>₱15.00</p>
+            <p>Stock: <span id="stock-product-157">10</span></p>
+            <input type="number" id="qty-product-157" min="1" max="10" value="1">
+            <button id="btn-product-157" onclick="addToCart('White Glue (1pc)', 15, 157)">Add to Cart</button>
+            <button id="cancel-product-157" onclick="cancelFromCart(157)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 156 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/glue.jpg">
+            <h3>White Glue</h3>
+            <b>Multi-Purpose</b>
+		<p style="color:black;font-size:80%;">(2 pieces)</p>
+            <p>₱25.00</p>
+            <p>Stock: <span id="stock-product-156">10</span></p>
+            <input type="number" id="qty-product-156" min="1" max="10" value="1">
+            <button id="btn-product-156" onclick="addToCart('White Glue (2pcs)', 25, 156)">Add to Cart</button>
+            <button id="cancel-product-156" onclick="cancelFromCart(156)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 153 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Color Violet)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-153">4</span></p>
+            <input type="number" id="qty-product-153" min="1" max="4" value="1">
+            <button id="btn-product-153" onclick="addToCart('Sport Liner (Violet)', 20, 153)">Add to Cart</button>
+            <button id="cancel-product-153" onclick="cancelFromCart(153)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 152 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Color Blue)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-152">4</span></p>
+            <input type="number" id="qty-product-152" min="1" max="4" value="1">
+            <button id="btn-product-152" onclick="addToCart('Sport Liner (Blue)', 20, 152)">Add to Cart</button>
+            <button id="cancel-product-152" onclick="cancelFromCart(152)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 151 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Color Orange)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-151">4</span></p>
+            <input type="number" id="qty-product-151" min="1" max="4" value="1">
+            <button id="btn-product-151" onclick="addToCart('Sport Liner (Orange)', 20, 151)">Add to Cart</button>
+            <button id="cancel-product-151" onclick="cancelFromCart(151)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 150 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Yellow Green)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-150">4</span></p>
+            <input type="number" id="qty-product-150" min="1" max="4" value="1">
+            <button id="btn-product-150" onclick="addToCart('Sport Liner (YlwGreen)', 20, 150)">Add to Cart</button>
+            <button id="cancel-product-150" onclick="cancelFromCart(150)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 149 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Color Yellow)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-149">4</span></p>
+            <input type="number" id="qty-product-149" min="1" max="4" value="1">
+            <button id="btn-product-149" onclick="addToCart('Sport Liner (Yellow)', 20, 149)">Add to Cart</button>
+            <button id="cancel-product-149" onclick="cancelFromCart(149)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 148 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/pen6.jpg">
+            <h3>Sport Liner</h3>
+            <h3>Highlighter</h3>
+		<p style="color:black;font-size:80%;">(Color Pink)</p>
+            <p>₱20.00</p>
+            <p>Stock: <span id="stock-product-148">4</span></p>
+            <input type="number" id="qty-product-148" min="1" max="4" value="1">
+            <button id="btn-product-148" onclick="addToCart('Sport Liner (Pink)', 20, 148)">Add to Cart</button>
+            <button id="cancel-product-148" onclick="cancelFromCart(148)" disabled>Cancel</button>
+        </div>
+
+
 
     <!-- Product 131 -->
         <div class="product" style="line-height:0.5;">
@@ -1002,7 +1114,8 @@
 			101:10,102:10,103:10,104:10,105:2,106:2,107:2,108:2,109:2,110:2,
 			111:2,112:2,113:2,114:2,115:2,116:2,117:2,118:2,119:2,120:2,
 			121:2,122:2,123:2,124:2,125:2,126:2,127:2,128:2,129:2,130:2,
-			131:2, }; // Initial stock levels
+			131:2,148:4,149:4,150:4,
+			151:4,152:4,153:4,156:10,157:10, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
