--- a/new.html
+++ b/new.html
@@ -143,6 +143,190 @@
 
     <div id="whole" class="container">
 
+<!-- Product 168 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images2/umbrella.jpg">
+            <h3>UV Manual</h3>
+            <h3>Umbrella</h3>
+		<p style="color:black;font-size:80%;">(1 piece only)</p>
+            <p>₱140.00</p>
+            <p>Stock: <span id="stock-product-168">2</span></p>
+            <input type="number" id="qty-product-168" min="1" max="1" value="1">
+            <button id="btn-product-168" onclick="addToCart('Umbrella (1pc)', 140, 168)">Add to Cart</button>
+            <button id="cancel-product-168" onclick="cancelFromCart(168)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 169 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images2/umbrella.jpg">
+            <h3>UV Manual</h3>
+            <h3>Umbrella</h3>
+		<p style="color:black;font-size:80%;">(Buy 1 take 1)</p>
+            <p>₱250.00</p>
+            <p>Stock: <span id="stock-product-169">2</span></p>
+            <input type="number" id="qty-product-169" min="1" max="1" value="1">
+            <button id="btn-product-169" onclick="addToCart(''Umbrella (2pcs)', 250, 169)">Add to Cart</button>
+            <button id="cancel-product-169" onclick="cancelFromCart(169)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 167 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/winter.jpg">
+            <h3>Winter</h3>
+            <h3>Berry</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-167">2</span></p>
+            <input type="number" id="qty-product-167" min="1" max="1" value="1">
+            <button id="btn-product-167" onclick="addToCart('Winter Berry', 150, 167)">Add to Cart</button>
+            <button id="cancel-product-167" onclick="cancelFromCart(167)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 166 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/pink.jpg">
+            <h3>Pink</h3>
+            <h3>Chiffon</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-166">2</span></p>
+            <input type="number" id="qty-product-166" min="1" max="1" value="1">
+            <button id="btn-product-166" onclick="addToCart('Pink Chiffon', 150, 166)">Add to Cart</button>
+            <button id="cancel-product-166" onclick="cancelFromCart(166)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 165 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/wish.jpg">
+            <h3>A Thousand</h3>
+            <h3>Wishes</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-165">2</span></p>
+            <input type="number" id="qty-product-165" min="1" max="1" value="1">
+            <button id="btn-product-165" onclick="addToCart('A Thousand Wishes', 150, 165)">Add to Cart</button>
+            <button id="cancel-product-165" onclick="cancelFromCart(165)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 164 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/laven.jpg">
+            <h3>Lavender</h3>
+            <h3>Sandalwood</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-164">2</span></p>
+            <input type="number" id="qty-product-164" min="1" max="1" value="1">
+            <button id="btn-product-164" onclick="addToCart('Lavender', 150, 164)">Add to Cart</button>
+            <button id="cancel-product-164" onclick="cancelFromCart(164)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 163 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/pea.jpg">
+            <h3>Sweet</h3>
+            <h3>Pea</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-163">2</span></p>
+            <input type="number" id="qty-product-163" min="1" max="1" value="1">
+            <button id="btn-product-163" onclick="addToCart('Sweet Pea', 150, 163)">Add to Cart</button>
+            <button id="cancel-product-163" onclick="cancelFromCart(163)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 162 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/sorbet2.jpg">
+            <h3>Candied</h3>
+            <h3>Sorbet</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-162">2</span></p>
+            <input type="number" id="qty-product-162" min="1" max="1" value="1">
+            <button id="btn-product-162" onclick="addToCart('Candied Sorbet', 150, 162)">Add to Cart</button>
+            <button id="cancel-product-162" onclick="cancelFromCart(162)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 161 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/sprinkle2.jpg">
+            <h3>Champagne</h3>
+            <h3>Sprinkles</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-161">2</span></p>
+            <input type="number" id="qty-product-161" min="1" max="1" value="1">
+            <button id="btn-product-161" onclick="addToCart('Sprinkles', 150, 161)">Add to Cart</button>
+            <button id="cancel-product-161" onclick="cancelFromCart(161)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 160 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/cran2.jpg">
+            <h3>Sweet Cran</h3>
+            <h3>Berry</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-160">2</span></p>
+            <input type="number" id="qty-product-160" min="1" max="1" value="1">
+            <button id="btn-product-160" onclick="addToCart('CranBerry', 150, 160)">Add to Cart</button>
+            <button id="cancel-product-160" onclick="cancelFromCart(160)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 158 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/peach2.jpg">
+            <h3>Peach</h3>
+            <h3>Tea</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-158">2</span></p>
+            <input type="number" id="qty-product-158" min="1" max="1" value="1">
+            <button id="btn-product-158" onclick="addToCart('Peach Tea', 150, 158)">Add to Cart</button>
+            <button id="cancel-product-158" onclick="cancelFromCart(158)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 159 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/coast2.jpg">
+            <h3>Coast</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-159">2</span></p>
+            <input type="number" id="qty-product-159" min="1" max="1" value="1">
+            <button id="btn-product-159" onclick="addToCart('Coast', 150, 159)">Add to Cart</button>
+            <button id="cancel-product-159" onclick="cancelFromCart(159)" disabled>Cancel</button>
+        </div>
+
+
+
 <!-- Product 157 -->
         <div class="product" style="line-height:0.5;">
             <img src="images/glue.jpg">
@@ -304,6 +488,7 @@
             <h4>Sports Casual</h4>
             <h4>Sling Bag</h4>
 		<p style="color:black;font-size:80%;">(Blue/Brown)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱399.00</p>
             <p>Stock: <span id="stock-product-146">1</span></p>
             <input type="number" id="qty-product-146" min="1" max="1" value="1">
@@ -454,6 +639,7 @@
             <h3>Cucumber</h3>
             <h3>Melon</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱200.00</p>
             <p>Stock: <span id="stock-product-136">2</span></p>
             <input type="number" id="qty-product-136" min="1" max="1" value="1">
@@ -526,6 +712,7 @@
             <h3>BEKNN</h3>
             <h3>ID Holder</h3>
 		<p style="color:black;font-size:80%;">(Pink Sling)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱25.00</p>
             <p>Stock: <span id="stock-product-131">2</span></p>
             <input type="number" id="qty-product-131" min="1" max="2" value="1">
@@ -724,7 +911,6 @@
             <h3>Winbook</h3>
             <h3>Sticky Notes</h3>
 		<p style="color:black;font-size:80%;">(Pink)</p>
-            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱5.00</p>
             <p>Stock: <span id="stock-product-117">2</span></p>
             <input type="number" id="qty-product-117" min="1" max="2" value="1">
@@ -738,6 +924,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (White)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-116">2</span></p>
             <input type="number" id="qty-product-116" min="1" max="2" value="1">
@@ -751,6 +938,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>(MistyRose)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-115">2</span></p>
             <input type="number" id="qty-product-115" min="1" max="2" value="1">
@@ -764,6 +952,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Pink)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-114">2</span></p>
             <input type="number" id="qty-product-114" min="1" max="2" value="1">
@@ -777,6 +966,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Fuchsia)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-113">2</span></p>
             <input type="number" id="qty-product-113" min="1" max="2" value="1">
@@ -790,6 +980,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Orange)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-112">2</span></p>
             <input type="number" id="qty-product-112" min="1" max="2" value="1">
@@ -803,6 +994,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Yellow)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-111">2</span></p>
             <input type="number" id="qty-product-111" min="1" max="2" value="1">
@@ -816,6 +1008,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Brown)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-110">2</span></p>
             <input type="number" id="qty-product-110" min="1" max="2" value="1">
@@ -829,6 +1022,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Black)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-109">2</span></p>
             <input type="number" id="qty-product-109" min="1" max="2" value="1">
@@ -842,6 +1036,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Violet)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-108">2</span></p>
             <input type="number" id="qty-product-108" min="1" max="2" value="1">
@@ -855,6 +1050,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Green)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-107">2</span></p>
             <input type="number" id="qty-product-107" min="1" max="2" value="1">
@@ -868,6 +1064,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Blue)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-106">2</span></p>
             <input type="number" id="qty-product-106" min="1" max="2" value="1">
@@ -881,6 +1078,7 @@
             <img src="images/clay2.jpg" >
             <h3>Super Light</h3>
             <h3>Clay (Red)</h3>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱10.00</p>
             <p>Stock: <span id="stock-product-105">2</span></p>
             <input type="number" id="qty-product-105" min="1" max="2" value="1">
@@ -1145,6 +1343,7 @@
             <img src="images4/per1.jpg" alt="Product 1">
             <h3>Peach Tea </h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱24.00</p>
             <p>Stock: <span id="stock-product-27">10</span></p>
             <input type="number" id="qty-product-27" min="1" max="10" value="1">
@@ -1156,6 +1355,7 @@
             <img src="images4/per2.jpg" alt="Product 2">
             <h3>Sorbet</h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱24.00</p>
             <p>Stock: <span id="stock-product-28">10</span></p>
             <input type="number" id="qty-product-28" min="1" max="10" value="1">
@@ -2098,18 +2298,19 @@
         let totalPrice = 0;
         let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3,
 			 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
-			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10,
+			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:0, 28:0, 29:10, 30:10, 31:10,32:10, 33:10,
 			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10,
 			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10,
 			71:50, 72:50, 73:10, 74:10, 75:10, 76:10,77:10, 78:10, 79:10, 80:10, 
 			81:10, 82:10,83:10, 84:10,85:10, 86:10,87:10, 88:10,89:10, 90:10,
 			91:10, 92:10, 93:10, 94:10, 95:10,96:10,97:10,98:10,99:10,100:10,
-			101:10,102:10,103:10,104:10,105:2,106:2,107:2,108:2,109:2,110:2,
-			111:2,112:2,113:2,114:2,115:2,116:2,117:0,118:2,119:2,120:2,
-			121:2,122:2,123:2,124:2,125:2,126:2,127:2,128:2,129:2,130:2,
-			131:2,132:2,133:2,134:30,135:0,136:1,137:0,138:0,139:0, 140:1,
-			141:1,142:0,143:1,144:1,145:1,146:1,147:1,148:4,149:4,150:4,
-			151:4,152:4,153:4,154:10,155:5,156:10,157:10,}; // Initial stock levels
+			101:10,102:10,103:10,104:10,105:0,106:0,107:0,108:0,109:0,110:0,
+			111:0,112:0,113:0,114:0,115:0,116:0,117:0,118:0,119:0,120:2,
+			121:2,122:0,123:0,124:1,125:1,126:2,127:2,128:2,129:2,130:2,
+			131:0,132:2,133:2,134:30,135:0,136:0,137:0,138:0,139:0, 140:1,
+			141:1,142:0,143:1,144:1,145:1,146:0,147:1,148:4,149:4,150:4,
+			151:4,152:4,153:4,154:10,155:5,156:10,157:10,158:1,159:1, 160:1,
+			161:1,162:1,163:1,164:1,165:1,166:1,167:1,168:2,169:1,}; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
